tests/ui/resolve/issue-104700-inner_scope.stderr
error[E0425]: cannot find value `bar` in this scope
  --> $DIR/issue-104700-inner_scope.rs:7:8
   |
LL |     if bar == 2 {
   |        ^^^
   |
help: the binding `bar` is available in a different scope in the same function
  --> $DIR/issue-104700-inner_scope.rs:4:13
   |
LL |         let bar = 2;
   |             ^^^

error[E0425]: cannot find function `test_func` in this scope
  --> $DIR/issue-104700-inner_scope.rs:10:5
   |
LL |     test_func(1);
   |     ^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
